--- a/Pages/AboutUs/about.html
+++ b/Pages/AboutUs/about.html
@@ -162,6 +162,56 @@
           </div>
         </div>
       </div>
+      <div class="container-fluid pt-2 d-lg-none">
+        <div class="row mx-auto">
+          <div class="col-12 mobile-category">
+            <ul class="d-flex align-items-center">
+              <li class="">
+                <a class="d-flex" href="../../index.html"> HOME </a>
+              </li>
+
+              <li>
+                <a class="d-flex" href="../DealsOfTheDay/dealsoftheday.html">
+                  <span> DEALS </span>
+                  <span> OF </span>
+                  <span> THE</span>
+                  <span> DAY</span>
+                </a>
+              </li>
+              <li>
+                <a class="d-flex" href="../CategoryToBag/categorytobag.html">
+                  <span> CATEGORY </span>
+                  <span> OF </span>
+                  <span> BAG</span>
+                </a>
+              </li>
+
+              <li>
+                <a
+                  class="d-flex"
+                  href="../DesktopEssential/desktop-essential.html"
+                >
+                  <span> DESKTOP </span>
+                  <span> ESSENTIAL</span>
+                </a>
+              </li>
+              <li>
+                <a class="d-flex" href="../ContactUs/contact.html">
+                  <span> CONTACT </span>
+                  <span> US </span>
+                </a>
+              </li>
+              <li>
+                <a class="d-flex" href="../AboutUs/about.html">
+                  <span> ABOUT </span>
+                  <span> US </span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <hr />
       <!-- Category Ends -->
 
       <div class="container-fluid my-4">
