--- a/Pages/CategoryToBag/categorytobag.html
+++ b/Pages/CategoryToBag/categorytobag.html
@@ -179,6 +179,55 @@
           </div>
         </div>
       </div>
+      <div class="container-fluid pt-2 d-lg-none">
+        <div class="row mx-auto">
+          <div class="col-12 mobile-category">
+            <ul class="d-flex align-items-center">
+              <li class="">
+                <a class="d-flex" href="../../index.html"> HOME </a>
+              </li>
+
+              <li>
+                <a class="d-flex" href="../DealsOfTheDay/dealsoftheday.html">
+                  <span> DEALS </span>
+                  <span> OF </span>
+                  <span> THE</span>
+                  <span> DAY</span>
+                </a>
+              </li>
+              <li>
+                <a class="d-flex" href="../CategoryToBag/categorytobag.html">
+                  <span> CATEGORY </span>
+                  <span> OF </span>
+                  <span> BAG</span>
+                </a>
+              </li>
+
+              <li>
+                <a
+                  class="d-flex"
+                  href="../DesktopEssential/desktop-essential.html"
+                >
+                  <span> DESKTOP </span>
+                  <span> ESSENTIAL</span>
+                </a>
+              </li>
+              <li>
+                <a class="d-flex" href="../ContactUs/contact.html">
+                  <span> CONTACT </span>
+                  <span> US </span>
+                </a>
+              </li>
+              <li>
+                <a class="d-flex" href="../AboutUs/about.html">
+                  <span> ABOUT </span>
+                  <span> US </span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <hr />
       <!-- Category Ends -->
       <!-- ================================================================================================================= -->
@@ -298,23 +347,40 @@
 
       <!-- Our Brands -->
 
-      <div class="container-fluid bg py-5 my-5">
+      <div class="container-fluid py-4 bg my-5">
         <div class="row mx-auto">
           <div class="col-12">
-            <h1 class="text-center"><span class="deals">Our</span> Brands</h1>
+            <h1 class="text-center my-4">
+              <span class="deals">Our</span> Brands
+            </h1>
           </div>
           <div
-            class="col-12 d-flex gap-4 justify-content-center align-items-center my-4"
+            class="col-1 p-0 d-flex gap-4 justify-content-center align-items-center my-4"
           >
             <img src="./Images/left.png" id="left" class="img-fluid i" alt="" />
-            <div
-              class="d-flex justify-content-center align-items-center gap-3 overflow-hidden logo-wrapper"
-            >
-              <img src="./Images/deli.png" class="img-fluid" alt="" />
-              <img src="./Images/kangaro.png" class="img-fluid" alt="" />
-              <img src="./Images/ourable.png" class="img-fluid" alt="" />
-              <img src="./Images/casio.png" class="img-fluid" alt="" />
+          </div>
+
+          <div
+            class="d-flex col-10 justify-content-center align-items-center gap-3 overflow-hidden logo-wrapper"
+          >
+            <div class="row">
+              <div class="col-6 col-md-3">
+                <img src="./Images/deli.png" class="img-fluid" alt="" />
+              </div>
+              <div class="col-6 col-md-3">
+                <img src="./Images/kangaro.png" class="img-fluid" alt="" />
+              </div>
+              <div class="col-6 col-md-3">
+                <img src="./Images/ourable.png" class="img-fluid" alt="" />
+              </div>
+              <div class="col-6 col-md-3">
+                <img src="./Images/casio.png" class="img-fluid" alt="" />
+              </div>
             </div>
+          </div>
+          <div
+            class="col-1 p-0 d-flex gap-4 justify-content-center align-items-center my-4"
+          >
             <img
               src="./Images/right.png"
               id="right"
