--- a/index.html
+++ b/index.html
@@ -176,7 +176,36 @@
           </div>
         </div>
       </div>
+      <div class="container-fluid pt-2 d-lg-none">
+        <div class="row mx-auto">
+          <div class="col-12 mobile-category">
+            <ul class="d-flex gap-3">
+              <li>
+                <a href="./index.html"> HOME </a>
+              </li>
+              <li>
+                <a href="./Pages/DealsOfTheDay/dealsoftheday.html">
+                  DEALS OF THE DAY
+                </a>
+              </li>
+              <li>
+                <a href="./Pages/CategoryToBag/categorytobag.html">
+                  CATEGORY OF THE BAG
+                </a>
+              </li>
+              <li>
+                <a href="./Pages/DesktopEssential/desktop-essential.html">
+                  DESKTOP ESSENTIAL
+                </a>
+              </li>
+              <li><a href="./Pages/ContactUs/contact.html"> CONTACT US </a></li>
+              <li><a href="./Pages/AboutUs/about.html">ABOUT US </a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <hr />
+
       <!-- Category Ends -->
       <!-- ================================================================================================================= -->
 
@@ -393,41 +422,87 @@
       <!-- ================================================================================================================= -->
 
       <!-- Deals of the week secttion  -->
-      <!-- <div class="container-fluid my-4">
+      <div class="container-fluid catalog my-4">
         <div class="row g-4 mx-auto">
           <h1 class="p-0">Deals Of The Week</h1>
 
-          <div class="col-12 p-0 text-center">
+          <div class="col-md-6 p-0 get-it-done">
             <img
               src="./Images/deals-of-the-week1.png"
-              class="img-fluid w-100"
+              class="img-fluid"
               alt=""
             />
           </div>
-          <div class="col-12 d-flex justify-content-between p-0">
-            <div class="card" style="max-width: 10rem">
-              <img src="./Images/catalog3.png" class="card-img-top" alt="..." />
+          <div
+            class="col-md-6 d-flex justify-content-between gap-5 justify-content-md-around p-0"
+          >
+            <div class="card" style="max-width: 18rem">
+              <img
+                src="./Images/deals-of-the-week2.png"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body px-1m-0">
                 <h5 class="card-title">Clerical GOODS</h5>
                 <p class="card-text">10.00$</p>
-                <button class="add-btn">
+                <button onclick="increment()" class="add-btn">
                   <img src="./Images/cart.png" class="img-fluid" alt="" /> Add
                 </button>
               </div>
             </div>
-            <div class="card" style="max-width: 10rem">
-              <img src="./Images/catalog3.png" class="card-img-top" alt="..." />
+            <div class="card" style="max-width: 18rem">
+              <img
+                src="./Images/deals-of-the-week3.png"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body px-1 m-0">
                 <h5 class="card-title">Clerical GOODS</h5>
                 <p class="card-text">10.00$</p>
-                <button class="add-btn">
+                <button onclick="increment()" class="add-btn">
                   <img src="./Images/cart.png" class="img-fluid" alt="" /> Add
                 </button>
               </div>
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
+      <div class="container-fluid catalog my-4">
+        <div class="row mx-auto">
+          <h1 class="p-0">Deals Of The Week</h1>
+
+          <div class="col-md-6 d-flex justify-content-between gap-5 p-0">
+            <div class="card" style="max-width: 18rem">
+              <img
+                src="./Images/deals-of-the-week4.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body px-1m-0">
+                <h5 class="card-title">Clerical GOODS</h5>
+                <p class="card-text">10.00$</p>
+                <button onclick="increment()" class="add-btn">
+                  <img src="./Images/cart.png" class="img-fluid" alt="" /> Add
+                </button>
+              </div>
+            </div>
+            <div class="card" style="max-width: 18rem">
+              <img
+                src="./Images/deals-of-the-week5.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body px-1 m-0">
+                <h5 class="card-title">Clerical GOODS</h5>
+                <p class="card-text">10.00$</p>
+                <button onclick="increment()" class="add-btn">
+                  <img src="./Images/cart.png" class="img-fluid" alt="" /> Add
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!-- Deals of the week secttion Ends -->
 
@@ -513,14 +588,27 @@
       <hr />
       <!-- ================================================================================================================= -->
 
-      <div class="p-2">
-        <p class="text-center footer-text">
-          &copy; Copyright Awali Starionary WLL 2023. All rights reserved.
-        </p>
+      <div class="container-fluid d-none d-sm-block">
+        <div class="row mx-auto">
+          <div class="col-12">
+            <p class="text-center">
+              &copy; Copyright Awali Starionary WLL 2023. All rights reserved.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid d-sm-none">
+        <div class="row">
+          <div class="col-12">
+            <p class="text-center">
+              &copy; Copyright Awali Starionary WLL 2023. <br />
+              All rights reserved.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
-      <!-- Footer Ends -->
-    </div>
+    <!-- Footer Ends -->
 
     <!-- ================================================================================================================= -->
 
