--- a/Pages/Yourcart/yourcart.html
+++ b/Pages/Yourcart/yourcart.html
@@ -177,36 +177,36 @@
       <h1 class="text-center"><span class="y">Y</span>our Cart</h1>
       <div class="container-fluid main-mobile my-4">
         <div class="row gx-3 mx-auto" id="mobile-cart">
-          <div class="col-12"></div>
-          <div class="col-12">
+          <div class="col-12 p-0">
             <div class="row">
-              <div class="col-12 px-5">
+              <div class="col-12 px-5" id="notg">
                 <div class="d-flex pe-4 heading-wrapper">
                   <div class="Item">
-                    <h2>Item</h2>
+                    <h2 id="q">Item</h2>
                   </div>
-                  <div class="Shipping text-center">
+                  <div class="Shipping text-center" id="r">
                     <h2>Shipping from</h2>
                   </div>
-                  <div class="Quantity text-center">
+                  <div class="Quantity text-center" id="w">
                     <h2>Quantity</h2>
                   </div>
-                  <div class="Shipping-cost text-center">
+                  <div class="Shipping-cost text-center" id="e">
                     <h2>Shipping Cost</h2>
                   </div>
-                  <div class="price text-center">
+                  <div class="price text-center" id="t">
                     <h2>Price</h2>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+
           <div class="row">
             <div class="col-12 px-5" id="main"></div>
           </div>
 
           <div class="col-12 d-flex justify-content-between align-items-center">
-            <div class="col-md-3">
+            <div class="col-md-4">
               <div class="ms-4">
                 <h4>We accepet payment option :</h4>
                 <img
@@ -214,25 +214,25 @@
                   class="img-fluid payment"
                   alt=""
                 />
-                <button class="continue">
+                <button class="continue ms-4">
                   <a class="continue" href="/">Continue Shopping</a>
                 </button>
               </div>
             </div>
-            <div class="col-md-3 py-5 subtotal-wrapper">
+            <div class="col-md-4 my-5 subtotal-wrapper">
               <div class="d-flex justify-content-between">
-                <h4 class="mt-2">Subtotal :</h4>
-                <h2 id="subtotal" class="subtotal">$ 0</h2>
+                <h4 class="mt-3">Subtotal :</h4>
+                <h2 id="subtotal" class="subtotal mt-3">$ 0</h2>
               </div>
               <div class="d-flex justify-content-between">
-                <h4 class="mt-2">Estimated shipping :</h4>
-                <h2 id="est-ship" class="estimated-shipping">$ 0</h2>
+                <h4 class="mt-3">Estimated shipping :</h4>
+                <h2 id="est-ship" class="estimated-shipping mt-3">$ 0</h2>
               </div>
               <div class="d-flex justify-content-between">
-                <h4 class="mt-2">Total :</h4>
-                <h2 id="total" class="total">$ 0</h2>
+                <h4 class="mt-">Total :</h4>
+                <h2 id="total" class="total mt-3">$ 0</h2>
               </div>
-              <div class="text-center">
+              <div class="text-centermt-2">
                 <button class="continue">
                   <a
                     href="../Payment/payment.html"
@@ -243,6 +243,48 @@
                   </a>
                 </button>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid d-lg-none">
+        <div class="row p-0 mx-auto">
+          <div class="col-6 first-half d-flex flex-column">
+            <div class="d-flex flex-column">
+              <h4 class="">We accepet payment option</h4>
+              <img
+                style="max-width: 250px"
+                src="./Images/payment-removebg-preview 1.png"
+                class="img-fluid"
+                alt=""
+              />
+              <div class="text-center">
+                <button class="continue-mobile con-mob mt-1">
+                  <a href="/">Continue Shopping</a>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 p-0 second-half">
+            <div class="d-flex justify-content-between">
+              <h4 class="">Subtotal :</h4>
+              <h2 id="subtotal" class="subtotal">$ 0</h2>
+            </div>
+            <div class="d-flex justify-content-between">
+              <h4 class="mt-3">Est. shipping :</h4>
+              <h2 id="est-ship" class="estimated-shipping mt-3">$ 0</h2>
+            </div>
+            <div class="d-flex justify-content-between">
+              <h4 class="mt-3">Total :</h4>
+              <h2 id="total" class="total mt-3">$ 0</h2>
+            </div>
+            <div class=" ">
+              <button class="continue-mobile">
+                <a href="../Payment/payment.html" type="button">
+                  Secure Checkout
+                </a>
+              </button>
             </div>
           </div>
         </div>
