Added wishlist aside part

--- a/Pages/AboutUs/about.html
+++ b/Pages/AboutUs/about.html
@@ -202,7 +202,7 @@
                 </a>
               </li>
               <li>
-                <a class="d-flex" href="../AboutUs/about.html">
+                <a class="d-flex about" href="../AboutUs/about.html">
                   <span> ABOUT </span>
                   <span> US </span>
                 </a>
