--- a/Pages/CategoryToBag/categorytobag.html
+++ b/Pages/CategoryToBag/categorytobag.html
@@ -196,7 +196,10 @@
                 </a>
               </li>
               <li>
-                <a class="d-flex" href="../CategoryToBag/categorytobag.html">
+                <a
+                  class="d-flex cob"
+                  href="../CategoryToBag/categorytobag.html"
+                >
                   <span> CATEGORY </span>
                   <span> OF </span>
                   <span> BAG</span>
