--- a/Pages/ContactUs/contact.html
+++ b/Pages/ContactUs/contact.html
@@ -195,7 +195,7 @@
                 </a>
               </li>
               <li>
-                <a class="d-flex" href="../ContactUs/contact.html">
+                <a class="d-flex con-us" href="../ContactUs/contact.html">
                   <span> CONTACT </span>
                   <span> US </span>
                 </a>
