--- a/Pages/DealsOfTheDay/dealsoftheday.html
+++ b/Pages/DealsOfTheDay/dealsoftheday.html
@@ -187,7 +187,10 @@
               </li>
 
               <li>
-                <a class="d-flex" href="../DealsOfTheDay/dealsoftheday.html">
+                <a
+                  class="d-flex dotd"
+                  href="../DealsOfTheDay/dealsoftheday.html"
+                >
                   <span> DEALS </span>
                   <span> OF </span>
                   <span> THE</span>
