--- a/Pages/DesktopEssential/desktop-essential.html
+++ b/Pages/DesktopEssential/desktop-essential.html
@@ -204,7 +204,7 @@
 
               <li>
                 <a
-                  class="d-flex"
+                  class="d-flex desk-essen"
                   href="../DesktopEssential/desktop-essential.html"
                 >
                   <span> DESKTOP </span>
