--- a/Pages/Wishlist/wishlist.html
+++ b/Pages/Wishlist/wishlist.html
@@ -177,131 +177,186 @@
       <!-- Category Ends -->
       <!-- ================================================================================================================= -->
 
-      <div class="container-fluid catalog my-4">
-        <div class="row gy-4 mx-auto">
-          <h1 class="text-center"><span class="my">My </span> Wishlist</h1>
-          <div class="col-6 mx-auto col-md-2 p-0">
-            <div class="card">
-              <div class="overflow-hidden catalog-img-wrapper">
-                <img src="./Images/star.png" class="card-img-top" alt="..." />
-              </div>
-              <div class="card-body p-0">
-                <h5 class="card-title p-0">Clerical GOODS</h5>
-                <p class="card-text p-0">10.00$</p>
-                <button class="add-btn">SHOW SIMILAR</button>
-              </div>
-            </div>
+      <div class="container-fluid m-0 my-4">
+        <div class="row mx-auto p-0 m-0 newrow">
+          <div class="col-12 mt-3 mb-5 p-0">
+            <h1 class="text-center"><span class="y">Y</span>our Wishlist</h1>
           </div>
-          <div class="col-6 mx-auto col-md-2 p-0">
-            <div class="card">
-              <img src="./Images/makeup.png" class="card-img-top" alt="..." />
-              <div class="card-body p-0">
-                <h5 class="card-title p-0">Clerical GOODS</h5>
-                <p class="card-text text-center p-0">10.00$</p>
-                <button class="add-btn text-center">MOVE TO BAG</button>
-              </div>
+          <div class="col-md-2 d-none d-md-block">
+            <div class="card left-card">
+              <h2 class="recent-news">Recent News</h2>
+              <h3 class="all-stories my-2">All Stories</h3>
+              <h3 class="categories">Categories</h3>
+              <ul class="list-group">
+                <li class="list-group-item p-0 my-2">Facebook</li>
+                <li class="list-group-item p-0 my-2">Messenger</li>
+                <li class="list-group-item p-0 my-2">Instagram</li>
+                <li class="list-group-item p-0 my-2">Whatsapp</li>
+                <li class="list-group-item p-0 my-2">Workplace</li>
+                <li class="list-group-item p-0 my-2">Meta Quest</li>
+                <li class="list-group-item p-0 my-2">Meta Portal</li>
+              </ul>
             </div>
-          </div>
-          <div class="col-6 mx-auto col-md-2 p-0">
-            <div class="card">
-              <img src="./Images/board.png" class="card-img-top" alt="..." />
-              <div class="card-body p-0">
-                <h5 class="card-title p-0">Clerical GOODS</h5>
-                <p class="card-text p-0">10.00$</p>
-                <button class="add-btn text-center">MOVE TO BAG</button>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 mx-auto col-md-2 p-0">
-            <div class="card">
-              <img src="./Images/star.png" class="card-img-top" alt="..." />
-              <div class="card-body p-0">
-                <h5 class="card-title p-0">Clerical GOODS</h5>
-                <p class="card-text p-0">10.00$</p>
-                <button class="add-btn text-center">MOVE TO BAG</button>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 mx-auto col-md-2 p-0">
-            <div class="card">
-              <img src="./Images/makeup.png" class="card-img-top" alt="..." />
-              <div class="card-body p-0">
-                <h5 class="card-title p-0">Clerical GOODS</h5>
-                <p class="card-text p-0">10.00$</p>
-                <button class="add-btn text-center">MOVE TO BAG</button>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 mx-auto col-md-2 p-0">
-            <div class="card">
-              <div class="overflow-hidden catalog-img-wrapper">
-                <img src="./Images/star.png" class="card-img-top" alt="..." />
-              </div>
-              <div class="card-body p-0">
-                <h5 class="card-title p-0">Clerical GOODS</h5>
-                <p class="card-text p-0">10.00$</p>
-                <button class="add-btn">SHOW SIMILAR</button>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 mx-auto col-md-2 p-0">
-            <div class="card">
-              <img src="./Images/makeup.png" class="card-img-top" alt="..." />
-              <div class="card-body p-0">
-                <h5 class="card-title p-0">Clerical GOODS</h5>
-                <p class="card-text text-center p-0">10.00$</p>
-                <button class="add-btn text-center">MOVE TO BAG</button>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 mx-auto col-md-2 p-0">
-            <div class="card">
-              <img src="./Images/board.png" class="card-img-top" alt="..." />
-              <div class="card-body p-0">
-                <h5 class="card-title p-0">Clerical GOODS</h5>
-                <p class="card-text p-0">10.00$</p>
-                <button class="add-btn text-center">MOVE TO BAG</button>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 mx-auto col-md-2 p-0">
-            <div class="card">
-              <img src="./Images/star.png" class="card-img-top" alt="..." />
-              <div class="card-body p-0">
-                <h5 class="card-title p-0">Clerical GOODS</h5>
-                <p class="card-text p-0">10.00$</p>
-                <button class="add-btn text-center">MOVE TO BAG</button>
-              </div>
-            </div>
-          </div>
+            <div class="card right-card">
+              <h3 class="topic">Topic</h3>
+              <ul class="list-group">
+                <li class="list-group-item p-0 my-2">Company News</li>
+                <li class="list-group-item p-0 my-2">
+                  Technology and Innovation
+                </li>
+                <li class="list-group-item p-0 my-2">Data and Privacy</li>
+                <li class="list-group-item p-0 my-2">Safety and Expression</li>
+                <li class="list-group-item p-0 my-2">
+                  Combating Misinformation
+                </li>
 
-          <div class="col-6 mx-auto col-md-2 p-0">
-            <div class="card">
-              <img src="./Images/makeup.png" class="card-img-top" alt="..." />
-              <div class="card-body p-0">
-                <h5 class="card-title p-0">Clerical GOODS</h5>
-                <p class="card-text p-0">10.00$</p>
-                <button class="add-btn text-center">MOVE TO BAG</button>
-              </div>
+                <li class="list-group-item p-0 my-2">Election Integrity</li>
+                <li class="list-group-item p-0 my-2">
+                  Strengthening Communities
+                </li>
+                <li class="list-group-item p-0 my-2">
+                  Diversity and Inclusion
+                </li>
+              </ul>
             </div>
           </div>
-          <div class="col-6 mx-auto col-md-2 p-0">
-            <div class="card">
-              <img src="./Images/star.png" class="card-img-top" alt="..." />
-              <div class="card-body p-0">
-                <h5 class="card-title p-0">Clerical GOODS</h5>
-                <p class="card-text p-0">10.00$</p>
-                <button class="add-btn text-center">MOVE TO BAG</button>
+          <div class="col-md-9">
+            <div class="row g-4">
+              <div class="col-md-3 col-6">
+                <div class="card" style="max-width: 18rem">
+                  <img src="./Images/star.png" class="card-img-top" alt="..." />
+                  <div class="card-body px-0 pt-3">
+                    <h5 class="card-title">Clerical GOODS</h5>
+                    <p class="card-text">10.00$</p>
+                    <button
+                      class="add-btn d-flex justify-content-center align-items-center gap-3"
+                    >
+                      <img src="./Images/cart.png" class="img-fluid" alt="" />
+                      Add
+                    </button>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-6 mx-auto col-md-2 p-0">
-            <div class="card">
-              <img src="./Images/board.png" class="card-img-top" alt="..." />
-              <div class="card-body p-0">
-                <h5 class="card-title p-0">Clerical GOODS</h5>
-                <p class="card-text p-0">10.00$</p>
-                <button class="add-btn text-center">MOVE TO BAG</button>
+              <div class="col-md-3 col-6">
+                <div class="card" style="max-width: 18rem">
+                  <img
+                    src="./Images/makeup.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body px-0 pt-3">
+                    <h5 class="card-title">Clerical GOODS</h5>
+                    <p class="card-text">10.00$</p>
+                    <button
+                      class="add-btn d-flex justify-content-center align-items-center gap-3"
+                    >
+                      <img src="./Images/cart.png" class="img-fluid" alt="" />
+                      Add
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 col-6">
+                <div class="card" style="max-width: 18rem">
+                  <img src="./Images/star.png" class="card-img-top" alt="..." />
+                  <div class="card-body px-0 pt-3">
+                    <h5 class="card-title">Clerical GOODS</h5>
+                    <p class="card-text">10.00$</p>
+                    <button
+                      class="add-btn d-flex justify-content-center align-items-center gap-3"
+                    >
+                      <img src="./Images/cart.png" class="img-fluid" alt="" />
+                      Add
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 col-6">
+                <div class="card" style="max-width: 18rem">
+                  <img
+                    src="./Images/makeup.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body px-0 pt-3">
+                    <h5 class="card-title">Clerical GOODS</h5>
+                    <p class="card-text">10.00$</p>
+                    <button
+                      class="add-btn d-flex justify-content-center align-items-center gap-3"
+                    >
+                      <img src="./Images/cart.png" class="img-fluid" alt="" />
+                      Add
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 col-6">
+                <div class="card" style="max-width: 18rem">
+                  <img src="./Images/star.png" class="card-img-top" alt="..." />
+                  <div class="card-body px-0 pt-3">
+                    <h5 class="card-title">Clerical GOODS</h5>
+                    <p class="card-text">10.00$</p>
+                    <button
+                      class="add-btn d-flex justify-content-center align-items-center gap-3"
+                    >
+                      <img src="./Images/cart.png" class="img-fluid" alt="" />
+                      Add
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 col-6">
+                <div class="card" style="max-width: 18rem">
+                  <img
+                    src="./Images/makeup.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body px-0 pt-3">
+                    <h5 class="card-title">Clerical GOODS</h5>
+                    <p class="card-text">10.00$</p>
+                    <button
+                      class="add-btn d-flex justify-content-center align-items-center gap-3"
+                    >
+                      <img src="./Images/cart.png" class="img-fluid" alt="" />
+                      Add
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 col-6">
+                <div class="card" style="max-width: 18rem">
+                  <img src="./Images/star.png" class="card-img-top" alt="..." />
+                  <div class="card-body px-0 pt-3">
+                    <h5 class="card-title">Clerical GOODS</h5>
+                    <p class="card-text">10.00$</p>
+                    <button
+                      class="add-btn d-flex justify-content-center align-items-center gap-3"
+                    >
+                      <img src="./Images/cart.png" class="img-fluid" alt="" />
+                      Add
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 col-6">
+                <div class="card" style="max-width: 18rem">
+                  <img
+                    src="./Images/makeup.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body px-0 pt-3">
+                    <h5 class="card-title">Clerical GOODS</h5>
+                    <p class="card-text">10.00$</p>
+                    <button
+                      class="add-btn d-flex justify-content-center align-items-center gap-3"
+                    >
+                      <img src="./Images/cart.png" class="img-fluid" alt="" />
+                      Add
+                    </button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
