--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   </a>
                 </li>
                 <li class="nav-item cart-link">
-                  <a class="nav-link" href="./Pages/Yourcart/yourcart.html">
+                  <a class="nav-link" href="./Pages/Wishlist/wishlist.html">
                     <span><img src="./Images/cart.png " alt="" /></span>
                     <div class="cart-amount"></div>
                     <span class="ms-2">Whislist </span>
@@ -181,7 +181,7 @@
           <div class="col-12 mobile-category">
             <ul class="d-flex gap-3">
               <li>
-                <a href="./index.html"> HOME </a>
+                <a class="home" href="./index.html"> HOME </a>
               </li>
               <li>
                 <a href="./Pages/DealsOfTheDay/dealsoftheday.html">
