Modified widhlist categories

--- a/Pages/Wishlist/wishlist.html
+++ b/Pages/Wishlist/wishlist.html
@@ -182,41 +182,29 @@
           <div class="col-12 mt-3 mb-5 p-0">
             <h1 class="text-center"><span class="y">Y</span>our Wishlist</h1>
           </div>
-          <div class="col-md-2 d-none d-md-block">
+          <div class="col-md-2 mb-3 py-0 d-none d-md-block">
             <div class="card left-card">
-              <h2 class="recent-news">Recent News</h2>
-              <h3 class="all-stories my-2">All Stories</h3>
               <h3 class="categories">Categories</h3>
               <ul class="list-group">
-                <li class="list-group-item p-0 my-2">Facebook</li>
-                <li class="list-group-item p-0 my-2">Messenger</li>
-                <li class="list-group-item p-0 my-2">Instagram</li>
-                <li class="list-group-item p-0 my-2">Whatsapp</li>
-                <li class="list-group-item p-0 my-2">Workplace</li>
-                <li class="list-group-item p-0 my-2">Meta Quest</li>
-                <li class="list-group-item p-0 my-2">Meta Portal</li>
+                <li class="list-group-item p-0 my-2">Clerical GOODS</li>
+                <li class="list-group-item p-0 my-2">Clerical GOODS</li>
+                <li class="list-group-item p-0 my-2">Clerical GOODS</li>
+                <li class="list-group-item p-0 my-2">Clerical GOODS</li>
+                <li class="list-group-item p-0 my-2">Clerical GOODS</li>
+                <li class="list-group-item p-0 my-2">Clerical GOODS</li>
               </ul>
             </div>
-            <div class="card right-card">
-              <h3 class="topic">Topic</h3>
+            <div class="card right-card my-3">
+              <h3 class="topic">Sub Category</h3>
               <ul class="list-group">
-                <li class="list-group-item p-0 my-2">Company News</li>
+                <li class="list-group-item p-0 my-2">Electronics & Gadgets.</li>
                 <li class="list-group-item p-0 my-2">
                   Technology and Innovation
                 </li>
-                <li class="list-group-item p-0 my-2">Data and Privacy</li>
-                <li class="list-group-item p-0 my-2">Safety and Expression</li>
-                <li class="list-group-item p-0 my-2">
-                  Combating Misinformation
-                </li>
-
-                <li class="list-group-item p-0 my-2">Election Integrity</li>
-                <li class="list-group-item p-0 my-2">
-                  Strengthening Communities
-                </li>
-                <li class="list-group-item p-0 my-2">
-                  Diversity and Inclusion
-                </li>
+                <li class="list-group-item p-0 my-2">Games</li>
+                <li class="list-group-item p-0 my-2">Stationery</li>
+                <li class="list-group-item p-0 my-2">Accessories</li>
+                <li class="list-group-item p-0 my-2">Cosmetics, and Beauty</li>
               </ul>
             </div>
           </div>
