Edited wishlist aside

--- a/Pages/DesktopEssential/desktop-essential.html
+++ b/Pages/DesktopEssential/desktop-essential.html
@@ -74,7 +74,7 @@
                   </a>
                 </li>
                 <li class="nav-item cart-link">
-                  <a class="nav-link" href="./Pages/Yourcart/yourcart.html">
+                  <a class="nav-link" href="../Wishlist/wishlist.html">
                     <span><img src="./Images/cart.png " alt="" /></span>
                     <div class="cart-amount"></div>
                     <span class="ms-2">Whislist </span>
