--- a/Pages/Wishlist/wishlist.html
+++ b/Pages/Wishlist/wishlist.html
@@ -187,11 +187,12 @@
               <h3 class="categories">Categories</h3>
               <ul class="list-group">
                 <li class="list-group-item p-0 my-2">Clerical GOODS</li>
-                <li class="list-group-item p-0 my-2">Clerical GOODS</li>
-                <li class="list-group-item p-0 my-2">Clerical GOODS</li>
-                <li class="list-group-item p-0 my-2">Clerical GOODS</li>
-                <li class="list-group-item p-0 my-2">Clerical GOODS</li>
-                <li class="list-group-item p-0 my-2">Clerical GOODS</li>
+                <li class="list-group-item p-0 my-2">School & College</li>
+                <li class="list-group-item p-0 my-2">Office Labels</li>
+                <li class="list-group-item p-0 my-2">Writing Instrument</li>
+                <li class="list-group-item p-0 my-2">Desk Accessories</li>
+                <li class="list-group-item p-0 my-2">Blinding Lamination</li>
+                <li class="list-group-item p-0 my-2">Hole punches</li>
               </ul>
             </div>
             <div class="card right-card my-3">
@@ -202,9 +203,11 @@
                   Technology and Innovation
                 </li>
                 <li class="list-group-item p-0 my-2">Games</li>
-                <li class="list-group-item p-0 my-2">Stationery</li>
+                <li class="list-group-item p-0 my-2">Stationery Consumable</li>
                 <li class="list-group-item p-0 my-2">Accessories</li>
-                <li class="list-group-item p-0 my-2">Cosmetics, and Beauty</li>
+                <li class="list-group-item p-0 my-2">Cosmetics and Beauty</li>
+                <li class="list-group-item p-0 my-2">Filling Archives</li>
+                <li class="list-group-item p-0 my-2">label Printer</li>
               </ul>
             </div>
           </div>
